--- a/src/components/testimonials/testimonials.scss
+++ b/src/components/testimonials/testimonials.scss
@@ -17,7 +17,7 @@
     display: none;
     @include mobile {
       display: block;
-      color: $brickRed;
+      color: $secondaryColor;
       font-style: italic;
       font-size: 2vh;
       font-weight: 500;
@@ -25,8 +25,8 @@
 
     .review {
       @include mobile {
-        background-color: $secondaryColor;
         border-radius: 15px;
+        border: solid $brickRed;
         padding: 20px;
         margin-bottom: 20px;
         margin-left: 15px;
@@ -62,16 +62,14 @@
     .card {
       width: 300px;
       position: relative;
-      background-color: $brickRed;
+      background-color: $mainColor;
       height: 75%;
       border-radius: 10px;
-      box-shadow: 0px 0px 15px -8px $secondaryColor;
+      border: solid $brickRed;
       display: flex;
       flex-direction: column;
       justify-content: space-around;
       padding: 20px;
-      margin-left: 10px;
-      margin-right: 10px;
       transition: all 1s ease;
 
       @include mobile {
@@ -86,6 +84,17 @@
         width: 330px;
         height: 80%;
       }
+      &.featured{
+        width: 300px;
+        height: 80%;
+        margin: 0 30px;
+
+        @include mobile{
+            width: 250px;
+            height: 180;
+            margin: 1px;
+        }
+    }
 
       &:hover {
         transform: scale(1.1);
@@ -96,8 +105,11 @@
       .center {
         padding: 10px;
         border-radius: 10px;
+        border: solid $mainColor;
         background-color: $mainColor;
         color: $secondaryColor;
+        font-style: italic;
+        font-size: 18px;
         @include mobile {
           font-size: 12px;
           padding: 5px;
@@ -110,13 +122,15 @@
         justify-content: center;
         flex-direction: column;
         position: absolute;
-        bottom: 0;
+        bottom: 10px;
+        right: 0;
+        margin-right: 10px;
         @include mobile {
           text-align: center;
         }
         h3 {
           margin-bottom: 5px;
-          color: $mainColor;
+          color: $secondaryColor;
           @include mobile {
             font-size: 14px;
             margin-bottom: 0;
