--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -25,7 +25,7 @@
       margin-left: 0px;
       height: auto;
     }
-    @media screen and (max-height: 700px) {
+    @media screen and (max-width: 410px) {
       width: 100px;
     }
   }
@@ -110,7 +110,7 @@
         height: 40px;
         width: 150px;
         overflow: hidden;
-        @media screen and (max-height: 700px) {
+        @media screen and (max-width: 410px) {
           width: 100px;
           font-size: 10px;
           height: 30px;
@@ -141,7 +141,7 @@
           position: absolute;
           right: 15px;
         }
-        @media screen and (max-height: 700px) {
+        @media screen and (max-width: 410px) {
           top: 18px;
         }
 
